# python-project-lvl1

./: :tt  README.md  makefile  pyproject.toml
.github/workflows/: hexlet-check.ml
brain_games/: __init__.py  cli.py  config.py  core.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
